fix: resolve card plan logo overflow container

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -6016,6 +6016,12 @@
           .plan-title {
             text-align: left;
             
+            img {
+              height: 5rem;
+              width: 100%;
+              object-fit: contain;
+            }
+
             p { 
               margin-bottom: $padding-xxs + $padding-xs;
             }
